# webgpu

./: CMakeLists.txt  README.md
lib/webgpu/: CMakeLists.txt
lib/webgpu/Include/webgpu/: webgpu.h
lib/webgpu/inc/: webgpu.hpp
src/: WGPUAdapter.cpp  WGPUAdapter.h  glfw3webgpu.c  glfw3webgpu.h  main.cpp  webgpu-release.h  webgpu-utils.cpp  webgpu-utils.h  window.cpp  window.h
src/GPU/: GPUAdapter.cpp  GPUAdapter.h  GPUBindingGroup.cpp  GPUBindingGroup.h  GPUBuffer.cpp  GPUBuffer.h  GPUCommandBuffer.cpp  GPUCommandBuffer.h  GPUDevice.cpp  GPUDevice.h  GPUIndexBuffer.cpp  GPUIndexBuffer.h  GPUInstance.cpp  GPUInstance.h  GPURenderPass.cpp  GPURenderPass.h  GPURenderPipeline.cpp  GPURenderPipeline.h  GPUShader.cpp  GPUShader.h  GPUSurface.cpp  GPUSurface.h  GPUSwapChain.cpp  GPUSwapChain.h  GPUTexture.cpp  GPUTexture.h  GPUTypse.h  GPUUniformBuffer.cpp  GPUUniformBuffer.h  GPUVertexBuffer.cpp  GPUVertexBuffer.h  glfw3webgpu.c  glfw3webgpu.h
